--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.52.1",
+        "sass-loader": "^12.6.0",
+        "ts-loader": "^9.3.0",
+        "typescript": "^4.7.2"
     }
 }
