--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@types/react": "^18.0.9",
-        "@types/react-dom": "^18.0.5",
+        "@types/react": "^17.0.45",
+        "@types/react-dom": "^17.0.17",
+        "@types/react-router-dom": "^5.3.3",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-query": "3.6",
+        "react-router-dom": "^5.3.3",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
