--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-dom": "^17.0.2",
         "react-query": "3.6",
         "react-router-dom": "^5.3.3",
+        "react-toastify": "^7.0.4",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
