--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/index.js": "/js/index.js",
-    "/css/app.css": "/css/app.css"
+    "/js/index.js": "/js/index.js?id=2b71fb2455630eb21dc9a450108dd728",
+    "/css/app.css": "/css/app.css?id=e80591cf8b9c0966ad3932b3b9094a7e"
 }
